fix empty white space below map

--- a/src/Index/page.less
+++ b/src/Index/page.less
@@ -1,5 +1,4 @@
 .index-page {
-  padding: 0 0 40px 0;
   display: flex;
   flex-flow: column;
   align-items: center;
